Add more references.

--- a/index.html
+++ b/index.html
@@ -356,17 +356,23 @@
 
 <h2 align="middle">References</h2>
 <p align="middle">
-	<a href="https://github.com/weymouth/lily-pad">LilyPad,  weymouth</a>
+	<a href="https://github.com/weymouth/lily-pad">LilyPad</a>
 	<br><br>
-	<a href="https://github.com/PavelDoGreat/WebGL-Fluid-Simulation">WebGL Fluid Simulation,  PavelDoGreat</a>
+	<a href="https://physics.weber.edu/schroeder/fluids/">Fluid Dynamics Simulation, Dan Schroeder</a>
 	<br><br>
-	<a href="https://github.com/amandaghassaei/gpu-io/blob/main/examples/fluid/index.js">gpu-io,  Amanda Ghassaei</a>
+	<a href="https://github.com/PavelDoGreat/WebGL-Fluid-Simulation">WebGL Fluid Simulation</a>
+	<br><br>
+	<a href="https://github.com/rachelbhadra/smoke_simulator">Smoke Simulation</a>
+	<br><br>
+	<a href="https://github.com/amandaghassaei/gpu-io/blob/main/examples/fluid/index.js">gpu-io</a>
 	<br><br>
 	<a href="https://developer.nvidia.com/gpugems/gpugems/part-vi-beyond-triangles/chapter-38-fast-fluid-dynamics-simulation-gpu">GPU Gems, Chapter 38: Fast Fluid Dynamics Simulation on the GPU</a>
 	<br><br>
     <a href="http://barradeau.com/blog/?p=621">FBO Particles</a>
 	<br><br>
 	<a href="https://www.dgp.toronto.edu/public_user/stam/reality/Research/pdf/ns.pdf">Stable Fluids,  Jos Stam</a>
+	<br><br>
+	<a href="https://inside.mines.edu/~jpaone/papers/renderingWater.pdf">Rendering Water Using Compute Shaders and Navier Stokes Equations, Ivan Krukov</a>
 </p>
 <br>
 
@@ -380,6 +386,8 @@
 		<a href="/milestone_report/index.html">Milestone Status Report</a>
 		<br><br>
 		<a href="https://docs.google.com/presentation/d/1LgihI9-YyA07ZR4FKIZrS8GfaZh03c7KwcF1X6YACwU/edit?usp=sharing">Milestone Presentation Slides</a>
+		<br><br>
+		<a href="https://docs.google.com/presentation/d/1WlIjTLvA51g0U1x2rq4SyW24QVdCxenjaggzpMY8E-w/edit?usp=sharing">Final Presentation Slides</a>
 		<br><br>
 		<a href="/fluid_collision_sim/index.html">Fluid Collision Simulator</a>
 	</p>
