add problems encountered

--- a/index.html
+++ b/index.html
@@ -184,7 +184,11 @@
 
 <h2 align="middle">Problems Encountered</h2>
 <p>
-    Problems encountered go here
+    Initially, we had some trouble with getting the framework set up to be able to render the 
+    particle simulation, as none of us had prior experience working with three.js or WebGL. Additionally, 
+	until we implemented most of the features (advection, pressure, diffusion, external forces), 
+	it was difficult to debug our output besides checking that the screen rendered what we expected 
+	it to, as the error messages for gpu shaders were very nondescriptive. 
 </p>
 <br>
 
