--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 	<table style="width:100%">
 		<tr align="center">
 		<td>
-			<img style='border:2px solid #000000' src="images/stream.gif" align="middle" width="550px"/>
+			<img style='border:2px solid #000000' src="images/Stream.gif" align="middle" width="550px"/>
 			<figcaption>Fluid interaction with downstream obstacles.</figcaption>
 		</td>
 		</tr>
