--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2023</h1>
-<h1 align="middle">2D Fluid Simulator</h1>
+<h1 align="middle">2D Fluid Collision Simulator</h1>
 <h2 align="middle">Tyler Bhadra, Charlie Chen, Maxwell Lo, Victor Zhang</h2>
 
 <br><br>
