added video as youtube embed

--- a/index.html
+++ b/index.html
@@ -326,10 +326,7 @@
     <table style="width:100%">
       <tr align="center">
         <td>
-          <video width="750px" controls>
-            <!-- <source src="videos/TODO.mov" type="video/mp4"> -->
-            Your browser does not support the &lt;video&gt; tag.
-          </video>
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/WeFF--58Oro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </td>
       </tr>
     </table>
