--- a/index.html
+++ b/index.html
@@ -140,6 +140,28 @@
 <br>
 
 <h3 align="middle">Shaders</h3>
+<div align="middle">
+	<table style="width:100%">
+		<tr align="center">
+		<td>
+			<img style='border:2px solid #000000' src="images/advection_shader_diagram.png" align="middle" width="600px"/>
+			<figcaption>General implementation of a shader program (Advection shown).</figcaption>
+		</td>
+		</tr>
+	</table>
+</div>
+<br>
+<div align="middle">
+	<table style="width:100%">
+		<tr align="center">
+		<td>
+			<img style='border:2px solid #000000' src="images/shader_workflow.png" align="middle" width="800px"/>
+			<figcaption>Workflow of shader programs for each timestep.</figcaption>
+		</td>
+		</tr>
+	</table>
+</div>
+<br>
 <h4 align="middle">Advection</h4>
 <p>
 	Advection is the process of a fluid transporting itself. For our 2D grid of 
