Change background and text color + remove unused script.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   </script>
 <style>
   body {
+	background-color: rgb(56, 159, 153);
     padding: 100px;
     width: 1000px;
     margin: auto;
     text-align: left;
     font-weight: 300;
     font-family: 'Open Sans', sans-serif;
-    color: #121212;
+    color: white;
   }
   h1, h2, h3, h4 {
     font-family: 'Source Sans Pro', sans-serif;
@@ -433,16 +434,5 @@
 		<a href="fluid_collision_sim/index.html">Fluid Collision Simulator</a>
 	</p>
 </body>
-<!-- <script>
-	var links = document.body.getElementsByTagName("a")
-	var a = window.location.href.indexOf(".io")
-	var repo_name = window.location.href.substring(a+3)
-	for(var i = 0; i < links.length; i++){
-		var link = links[i]
-		var actual_name = link.href.substring(link.href.indexOf(".io")+4)
-		if (link.href.indexOf("https") == -1) {
-			link.href = repo_name + actual_name
-		}
-	}
-</script> -->
+
 </html>
